--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,3 +5,19 @@
 [x-cloak] {
     display: none;
 }
+
+@keyframes flip {
+    0% {
+        transform: perspective(400px) rotateY(0);
+    }
+    50% {
+        transform: perspective(400px) rotateY(180deg);
+    }
+    100% {
+        transform: perspective(400px) rotateY(360deg);
+    }
+}
+
+.animate-flip {
+    animation: flip 2s infinite;
+}
